tests/sksl/errors/StaticSwitchConditionalBreak.glsl
### Compilation failed:

error: 5: static switch contains non-static conditional exit
1 error
